# cuda-examples

./: .gitmodules  CMakeLists.txt
config/: default.cmake
include/auto/: auto.hpp
include/reductions/: reductions.hpp
include/streaming/: saxpy.hpp  vecadd.hpp
include/util/: cuda_device.hpp  cuda_error.hpp  cuda_exceptions.hpp  cuda_grid_config.hpp  cuda_init.hpp  cuda_managed.hpp  cuda_vector-impl.hpp  cuda_vector.hpp  device_callable.hpp  grid_stride.hpp  range.hpp
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/auto/: 1d_pattern.cu  CMakeLists.txt
src/reductions/: CMakeLists.txt  reductions.cu
src/streaming/: CMakeLists.txt  saxpy.cu  vecadd.cu
src/util/: CMakeLists.txt  cuda_grid_config.cpp
test/: CMakeLists.txt
test/util/: CMakeLists.txt
